Fixed some layout issues and added .mobile-hidden and .desktop-hidden to reorder the privacy policy and button on mobil e view

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,7 @@ body {
 	padding: 0;
 	width: 100%;
 	overflow-x: hidden;
+	scroll-behavior: smooth; /* Found at https://www.w3schools.com/howto/howto_css_smooth_scroll.asp#section2 */
 }
 
 body {
@@ -48,6 +49,12 @@ a p:hover {
 	transform: scale(1.1); /* Increases the size of the text by a scale of 1.1 */
 }
 
+article p {
+	font-size: 16px;
+	line-height: 28px;
+	margin: 1.1rem 1.1rem;
+ }
+ 
 
 /* Simple rules for floating left and right and adds padding */
 
@@ -90,7 +97,7 @@ a p:hover {
 }
 
 .page-title {
-	margin-top: 25px;
+	margin: 25px 20px 20px 20px;
 }
 
 
@@ -214,12 +221,6 @@ footer a:hover i.fa-twitter-square {
 .text-centered {
 	text-align: center;
 }
-
-.page-title {
-	padding-left: 50px;
-	padding-right: 50px;
-}
-
 
 /* General CSS ends here */
 
@@ -374,12 +375,12 @@ iframe.insta-iframe {
 
 #contact-form-wrapper {
 	width: 80%;
-	height: 800px;
+	height: auto;
 	margin: 30px auto 25px auto;
 	bottom: 50%;
 	border: black 1px solid;
 	background-color: #E0E4CC;
-	padding: 30px 0px 0px 100px;
+	padding: 30px 0 0 100px;
 }
 
 
@@ -408,6 +409,8 @@ input.contact-form-input {
 	border: 1px solid gray;
 	box-shadow: none;
 	display: block;
+	font-size: 20px;
+	font-weight: 700;
 }
 
 #submit:hover {
@@ -459,7 +462,7 @@ textarea {
 	float: left;
 	width: 45%;
 	overflow: hidden;
-	padding: 15px 0px 15px 20px;
+	padding: 15px 0 15px 20px;
 	margin: 20px auto 0 auto;
 	height: auto;
 }
@@ -477,7 +480,12 @@ iframe.youtube-video {
 	float: right;
 	height: auto;
 }
-
+.desktop-hidden{
+	display: none;
+}
+#submit.desktop-hidden{
+	display: none;
+}
 
 /* End of about page specific CSS */
 
@@ -498,14 +506,14 @@ iframe.youtube-video {
 	}
   	#index-html{
     	height: 120%; /* Should fix gap issue on Chrome mobile */
-  }
+  	}	
 	.site-logo {
 		font-size: 46px;
 	}
 	.row {
 		width: 100%; /* Sets the row to 100% width */
-		padding: 0px; /* Removes any padding */
-		margin: 0px;
+		padding: 0; /* Removes any padding */
+		margin: 0;
 		height: auto; /* Height sets automatically */
 	}
 	.column {
@@ -649,6 +657,18 @@ iframe.youtube-video {
 	#privacy-policy {
 		width: 100%;
 	}
+	#submit.mobile-hidden{
+		display: none;
+	}
+	#submit.desktop-hidden{
+		display: block;
+	}
+	.mobile-hidden{
+		display: none;
+	}
+	.desktop-hidden{
+		display: block;
+	}
 }
 
 
@@ -657,8 +677,8 @@ iframe.youtube-video {
 @media (max-width: 700px) {
 	.row {
 		width: 100%;
-		padding: 0px;
-		margin: 0px;
+		padding: 0;
+		margin: 0;
 	}
 	.column {
 		width: 80%;
@@ -707,10 +727,20 @@ iframe.youtube-video {
 		margin-left: -244px;
 	}
 	/* CSS to make the embedded YouTube video responsive */
-	iframe.youtube-video {
+	.youtube-video-div {
+		position: relative;
+  		width: 90%;
+  		padding-bottom: 56.25%; 
+  		height: 0;
+		margin: 10px 20px 50px 20px;
+	}
+	.youtube-video-div iframe{
+		position: absolute;
+		top:0;
+		left: 0;
 		width: 100%;
-		height: 300px;
-		;
+		height: 100%;
+		margin-bottom: 20px;
 	}
 	iframe.insta-iframe {
 		margin-left: 0;
